<resources>
    <string name="app_name">Library_YangShijing</string>
    <string name="welcome">Welcome to YangShijing Library!</string>
    <string name="goCheckOut_btn">Check Out</string>
    <string name="goDoQuery_btn">Do Query</string>
    <string name="title_query">Query</string>
    <string name="query_prompt">Choose a Query</string>
    <string name="showresult_btn">Show Result</string>
    <string name="goBack_btn">Back to Main Page</string>
    <string name="title_checkout"><![CDATA[Check Out & Return]]></string>
    <string name="studentID">Student ID</string>
    <string name="bookID">Book ID</string>
    <string name="date">Date</string>
    <string name="checkout_btn">Check Out</string>
    <string name="return_btn">Return</string>
    <string name="summary_btn">Summary</string>
    <string name="goBack_btn2">goBack</string>
    <string-array name="query_array">
        <item>Query 1</item>
        <item>Query 2</item>
        <item>Query 3</item>
        <item>Query 4</item>
        <item>Query 5</item>
        <item>Query 6</item>
        <item>Query 7</item>
    </string-array>
    <string name="title_checkoutlist">Check Out Record</string>
    <string name="stname">Name</string>
    <string name="coreduedate">Due Date</string>
    <string name="lbtitle">Book Title</string>
    <string name="checkoutlist_btn">Show Checkout List</string>


</resources>
