<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textStyle="bold"
        tools:text="@string/title_query" />

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:prompt="@string/query_prompt"
        android:entries="@array/query_array"/>

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:text="Show Result"
        tools:text="@string/showresult_btn" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/showcheckoutlist_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/checkoutlist_btn" />

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="Back to Main Page"
        tools:text="@string/goBack_btn" />
</LinearLayout>