<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YangShijingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="Welcome to YangShijing Library!"
            android:textStyle="bold"
            tools:text="@string/welcome" />

        <Button
            android:id="@+id/goCheckOut_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:width="200dp"
            android:text="Check Out"
            android:textStyle="bold"
            tools:text="@string/goCheckOut_btn" />

        <Button
            android:id="@+id/goDoQuery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:width="200dp"
            android:text="Do Query"
            android:textStyle="bold"
            tools:text="@string/goDoQuery_btn" />
    </LinearLayout>
</LinearLayout>


